レイアウトパーツのレビュー後に修正しました。

--- a/layout_parts/q4/index.html
+++ b/layout_parts/q4/index.html
@@ -21,16 +21,18 @@
         <!-- すでについてるクラスにはstyleを指定しない。styleをつける場合は自分で新たにクラスをつけること -->
         <!-- 新たにタグは追加しなくてもできます。 -->
         <div class="q4">
-          <div class="q4-table">
-            <div class="q4-data1">固定</div>
-            <div class="q4-data2">可変</div>
-            <div class="q4-data3">固定</div>
-          </div>
-          <div class="q4-table">
-            <div class="q4-data4">可変</div>
-            <div class="q4-data5">可変</div>
-            <div class="q4-data6">固定</div>
-          </div>
+          <div class="gray-box">
+            <div class="q4-table">
+              <div class="q4-data is-orange">固定</div>
+              <div class="q4-data is-purple">可変</div>
+              <div class="q4-data is-blue">固定</div>
+            </div>
+            <div class="q4-table">
+              <div class="q4-data is-yellow">可変</div>
+              <div class="q4-data is-red">可変</div>
+              <div class="q4-data is-greeen">固定</div>
+            </div>
+          </div>  
         </div>
         <!-- 回答はクラスq4の要素の中に書いてね -->
       </div>
