--- a/layout_parts/q5/index.html
+++ b/layout_parts/q5/index.html
@@ -21,15 +21,15 @@
         <!-- すでについてるクラスにはstyleを指定しない。styleをつける場合は自分で新たにクラスをつけること -->
         <!-- 新たにタグは追加しなくてもできます。 -->
         <div class="q5">
-          <div class="q5-box8">8</div>
-          <div class="q5-box5">5</div>
-          <div class="q5-box1">1</div>
-          <div class="q5-box7">7</div>
-          <div class="q5-box4">4</div>
-          <div class="q5-box6">6</div>
-          <div class="q5-box2">2</div>
-          <div class="q5-box3">3</div>
-          <div class="q5-box9">9</div>
+          <div class="q5-box is-8">8</div>
+          <div class="q5-box is-5">5</div>
+          <div class="q5-box is-1">1</div>
+          <div class="q5-box is-7">7</div>
+          <div class="q5-box is-4">4</div>
+          <div class="q5-box is-6">6</div>
+          <div class="q5-box is-2">2</div>
+          <div class="q5-box is-3">3</div>
+          <div class="q5-box is-9">9</div>
         </div>
         <!-- 回答はクラスq5の要素の中に書いてね -->
       </div>
