--- a/layout_parts/q6/index.html
+++ b/layout_parts/q6/index.html
@@ -24,17 +24,17 @@
           <div class="q6 q6--horizontal">
             <!-- Q6-1の回答はここに書いてね -->
             <!-- 新たにタグは追加しなくてもできます。 -->
-            <div class="q6__box">
-              <div class="q6__box__content1">
-                <p class="q6__text1">text-align</p>
+            <div class="q6__box is-textAlign">
+              <div class="q6__box__inner">
+                <p class="q6__box__text">text-align</p>
               </div>
             </div>
             <!-- Q6-1の回答はここに書いてね -->
 
             <!-- Q6-1の回答はここに書いてね -->
             <!-- 新たにタグは追加しなくてもできます。 -->
-            <div class="q6__box">
-              <p class="q6__text2">margin</p>
+            <div class="q6__box is-margin">
+              <p class="q6__box__text">margin</p>
             </div>  
             <!-- Q6-1の回答はここに書いてね -->
           </div>
@@ -47,9 +47,9 @@
           <!-- Q6-2の回答はここに書いてね -->
           <!-- すでについてるクラスにはstyleを指定しない。styleをつける場合は自分で新たにクラスをつけること -->
           <!-- 新たにタグは追加しなくてもできます。 -->
-          <div class="q6 q6--around table">
-            <div class="q6--around--box">
-              <p class="q6--around--text1">table</p>
+          <div class="q6 q6--around is-table">
+            <div class="q6__box">
+              <p class="q6__box__text">table</p>
             </div>
           </div>
           <!-- Q6-2の回答はここに書いてね -->
@@ -57,8 +57,8 @@
           <!-- Q6-2の回答はここに書いてね -->
           <!-- すでについてるクラスにはstyleを指定しない。styleをつける場合は自分で新たにクラスをつけること -->
           <!-- 新たにタグは追加しなくてもできます。 -->
-          <div class="q6 q6--around flex">
-            <p class="q6--around--text2">flex</p>  
+          <div class="q6 q6--around is-flex">
+            <p class="q6__box__text">flex</p>  
           </div>
           <!-- Q6-2の回答はここに書いてね -->
 
@@ -67,7 +67,7 @@
             <!-- すでについてるクラスにはstyleを指定しない。styleをつける場合は自分で新たにクラスをつけること -->
             <!-- 新たにタグは追加しなくてもできます。 -->
             <div class="q6__box is-stable">
-              <p class="q6__box__inner1">position固定</p>
+              <p class="q6__box__inner">position固定</p>
             </div>
             <!-- Q6-2の回答はここに書いてね -->
 
@@ -75,7 +75,7 @@
             <!-- すでについてるクラスにはstyleを指定しない。styleをつける場合は自分で新たにクラスをつけること -->
             <!-- 新たにタグは追加しなくてもできます。 -->
             <div class="q6__box is-flexible">
-              <p class="q6__box__inner2">position可変</p>
+              <p class="q6__box__inner">position可変</p>
             </div>
             <!-- Q6-2の回答はここに書いてね -->
           </div>
