--- a/layout_parts/q2/index.html
+++ b/layout_parts/q2/index.html
@@ -24,7 +24,8 @@
             <div class="gray-box">  
               <div class="q2-box">
                 <div class="photo-left">
-                <img src="http://gizumo-inc.github.io/sample/front-lesson/layout_parts_new/assets/img/q2/thumb_1.jpg">
+                <img src="http://gizumo-inc.github.io/sample/front-lesson/layout_parts_new/assets/img/q2/thumb_1.jpg"
+                alt="風船の写真">
                 </div>
                 <p class="q2-text">
                   Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
@@ -34,7 +35,8 @@
               </div>
             <div class="q2-box">  
               <div class="photo-right">
-              <img src="http://gizumo-inc.github.io/sample/front-lesson/layout_parts_new/assets/img/q2/thumb_2.jpg">
+              <img src="http://gizumo-inc.github.io/sample/front-lesson/layout_parts_new/assets/img/q2/thumb_2.jpg"
+              alt="写真家の写真">
               </div>
               <p class="q2-text">
                 Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
