--- a/layout_parts/q4/index.html
+++ b/layout_parts/q4/index.html
@@ -30,7 +30,7 @@
             <div class="q4-table">
               <div class="q4-data is-yellow">可変</div>
               <div class="q4-data is-red">可変</div>
-              <div class="q4-data is-greeen">固定</div>
+              <div class="q4-data is-green">固定</div>
             </div>
           </div>  
         </div>
